# dhall-intro

./: Build.hs  shell.nix  slides.tex
dhall/: constructors.dhall  env.dhall  example-two.dhall  example.dhall  lets.dhall  list-fold.dhall  numbers.dhall  optional-fold.dhall  partial.dhall  unions.dhall  use-prelude.dhall  using-prelude.dhall
dhall/persons/: Person  UrlImport.dhall  UrlImportFallback.dhall  UrlImportFrozen.dhall  people
dhall/schema/: Schema
images/: dhall-logo.src
nix/: default.nix  dhall-bash.nix  dhall-json.nix  dhall-nix.nix  dhall-text.nix  dhall-to-cabal.nix
snippets/: function-input.snippet  function.snippet  persons-main.snippet  persons.snippet  unions.snippet
source-code/: .ghc.environment.x86_64-linux-8.2.2  ChangeLog.md  Main.hs  default.nix  dhall-intro.cabal  stack.yaml
static-source/: bools.out  dhall-help.out  doubles.out  example.dhall.out  ints.out  lists.out  nats.out  optionals.out  records-combine1.out  records-combine2.out  records.out  texts.out  types.out  unions.out
