name:                dhall-intro
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Markus Hauck
maintainer:          markus1189@gmail.com
category:            Config
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable dhall-intro
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5
                     , dhall >= 1.15
                     , text
  default-language:    Haskell2010
